# cmake_template_app

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
cmake/: Doxygen.cmake
include/foo/: Foo.hpp  foo.hpp
src/: CMakeLists.txt  main.cpp
src/foo/: CMakeLists.txt  Foo.cpp  foo.cpp
test/: CMakeLists.txt
